Shows deprecated methods Added Expand / Collapse all buttons Better handling of typed POST data references. Cleaned up / removed some visible json types, and better explanation of binary stream result types. POST methods now possible to style (default: gray background) different from GET methods.

--- a/data/config.json
+++ b/data/config.json
@@ -1,3 +1,4 @@
 {
-  "defaultUrl": "http://localhost/DeBIP.Services.CoreAPI/swagger/docs/v1"
+  "defaultUrl": "http://localhost/DeBIP.Services.CoreAPI/swagger/docs/v1",
+  "initialCollapse":  true
 }
